fix: contact form not working on mobile

--- a/src/styles/pages/contact.sass
+++ b/src/styles/pages/contact.sass
@@ -15,7 +15,6 @@
         grid-template-columns: 1fr
         width: 100%
         align-self: start
-        padding: 0 5em
 
         #contact-form
             display: grid
@@ -63,7 +62,12 @@
                 list-style: none
                 margin: 0
                 padding: 0.5em 0 0.5em 0
-    
+
+
+        // TABLET
+        @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
+            padding: 0 3em
+
         //DESKTOP
         @media screen and (min-width: $desktop)
             grid-template-columns: 60% 40%
